--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://arnoldant.github.io/"
+baseurl = "https://arnoldant.github.io/blog"
 languageCode = "en-us"
 title = "ArnoldAnt Blog"
 
